bin/testsuite/tests/compiler/src/errors/compiler3752.swg
//#global testerror

#test
{
    var x = @kindof(@getcontext().allocator)
}
